# IntroducaoAProgramacaoWEB

./: README.md
Aulas/Aula0002/: estilo.css  estilo1.css  index.html  netflix.html
Aulas/Aula0003/: create.html  index.html  read.html  style.css
Aulas/Aula0004/: Http.txt  main.py  pyproject.toml
Aulas/Aula0004/static/css/: create.css  read.css
Aulas/Aula0004/templates/: create.html  index.html  list.html
Aulas/Aula0005/: poo1.py  poo2.py  tipos_valor_referencia.py
Aulas/Aula0006/: produto.py
Aulas/Aula0007/: arquivos1.py  arquivos2.py  main.py  pessoa.py  repository.py
Aulas/Aula0007/arquivos/: arquivo.txt  pessoas.txt
Aulas/Aula0008/: crud_estruturado.py  crud_pessoa.py  crud_produto.py  main.py  pessoa.py  pessoa.txt  produto.py  produto.txt
Exercicios/Aula0001/: facebook.html  instagram.html
Exercicios/Aula0002/: create.html  index.html  list.html
Exercicios/Aula0002/css/: index.css  list.css
Exercicios/Aula0003/: pyproject.toml
Exercicios/Aula0004/: main.py  pyproject.toml
Exercicios/Aula0005/: main.py  pyproject.toml
Exercicios/Aula0005-2/: main.py  pyproject.toml
Exercicios/Aula0005-2/static/css/: comum.css  create.css
Exercicios/Aula0005-2/templates/: index.html  list.html
Exercicios/Aula0005/templates/: create.html  list.html
Exercicios/Aula0006/: main.py  pessoa.py
Exercicios/Aula0007/: main.py  pacote.py  pyproject.toml
Exercicios/Aula0007/templates/: create.html  list.html
