[tool.poetry]
name = "Bisnacha"
version = "0.0.1"
description = "ERP do bisnacha com Flask"
authors = ["Maykon Granemann"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
