[tool.poetry]
name = "aula0005-2"
version = "0.1.0"
description = ""
authors = ["Maykon Granemann <maykon@zuplae.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
